force-app/main/default/objects/Consent_Configuration__c/Consent_Configuration__c.object-meta.xml
<CustomObject>
    <label>Consent Configuration</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Consent Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consent Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>