force-app/main/default/objects/Consent_Configuration__c/fields/Confirmation_Type__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Type__c</fullName>
    <description>Differentiate between Pip question and the agreement  (SGPRT - 1389)</description>
    <inlineHelpText>This can be a question(section) or agreement</inlineHelpText>
    <label>Confirmation_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>