force-app/main/default/objects/Consent_Configuration__c/fields/DependsOn__c.field-meta.xml
<CustomField>
    <fullName>DependsOn__c</fullName>
    <description>Where or not to show the field but only if the label used has a JavaScript truth value (SGPRT - 1389)</description>
    <inlineHelpText>Manages dependencies on field records</inlineHelpText>
    <label>DependsOn</label>
    <length>100</length>
    <type>Text</type>
</CustomField>