force-app/main/default/objects/Consent_Configuration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The Heading and description displayed using a pipe delimiter where the first value is the heading and the second is the sub-heading e.g. &quot; radio-button-description|radio-button-description-with-pip  (SGPRT - 1389)</description>
    <inlineHelpText>Pip Question</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>