force-app/main/default/objects/Consent_Configuration__c/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <description>The Consent Heading  (SGPRT - 1389)</description>
    <inlineHelpText>This is a consent heading, stating the reason for the consent</inlineHelpText>
    <label>Heading</label>
    <type>TextArea</type>
</CustomField>