force-app/main/default/objects/Consent_Configuration__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The key used when sending the data object on the approve call  (SGPRT - 1389)</description>
    <inlineHelpText>Name that is displayed by the give consent screen</inlineHelpText>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>