force-app/main/default/objects/Consent_Configuration__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Used for placement of the type working all ways in a left to right or top to bottom order  (SGPRT - 1389)</description>
    <inlineHelpText>The Ordering of questions in a consent screen</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>