force-app/main/default/objects/Consent_Configuration__c/fields/ToolTip__c.field-meta.xml
<CustomField>
    <fullName>ToolTip__c</fullName>
    <description>The tool tip text if null no tool tip will be displayed(SGPRT - 1389)</description>
    <inlineHelpText>Describes the field type in the give consent screen</inlineHelpText>
    <label>ToolTip</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>