force-app/main/default/objects/Consent_Configuration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used as a checkbox true/false   (SGPRT - 1389)</description>
    <inlineHelpText>Specify field type, it can be radio/checkbox button</inlineHelpText>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>