force-app/main/default/objects/Consent_Configuration__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value if should be check only values used is true if true &quot;Yes&quot; will be checked else &quot;No&quot;  (SGPRT - 1389)</description>
    <inlineHelpText>The value of the field of give consent</inlineHelpText>
    <label>Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>